#ifndef CARETAKER_H
#define CARETAKER_H

class Caretaker {
};

#endif
