//
// Created by Michael Tomlinson on 2025/07/30.
//

#ifndef PDFEXPORTER_H
#define PDFEXPORTER_H

class PDFExporter: public ExportCanvas {
private:
    void saveToFile();
}

#endif //PDFEXPORTER_H
