classDiagram
    %% Factory Method Pattern
    class Canvas {
        -shapes: Shape*
        +captureCurrent(): Memento*
        +undoAction(prev: Memento*): void
    }

    class ShapeFactory {
        <<abstract>>
        +createShape(): Shape*
    }

    class RectangleFactory {
        +createShape(): Shape*
        +toString(): string
    }

    class SquareFactory {
        +createShape(): Shape*
        +toString(): string
    }

    class TextboxFactory {
        +createShape(): Shape*
        +toString(): string
    }

    %% Prototype Pattern
    class Shape {
        <<abstract>>
        -length: int
        -width: int
        -colour: string
        -positionX: int
        -positionY: int
        +clone(): Shape*
    }

    class Rectangle {
        +clone(): Shape*
    }

    class Square {
        +clone(): Shape*
    }

    class Textbox {
        -text: string
        +clone(): Shape*
    }

    %% Template Method Pattern
    class ExportCanvas {
        <<abstract>>
        -canvas: Canvas*
        +export(): void
        +prepareCanvas(): void
        +renderElements(): void
        +saveToFile(): void
    }

    class PNGExporter {
        +prepareCanvas(): void
        +renderElements(): void
        +saveToFile(): void
    }

    class PDFExporter {
        +prepareCanvas(): void
        +renderElements(): void
        +saveToFile(): void
    }

    %% Memento Pattern
    class Memento {
        -shapes: Shape*
        +Memento(elements: Shape*)
    }

    class CareTaker {
        +addMemento(): void
        +getMemento(): Memento*
    }

    %% Relationships
    ShapeFactory <|-- RectangleFactory
    ShapeFactory <|-- SquareFactory
    ShapeFactory <|-- TextboxFactory

    Shape <|-- Rectangle
    Shape <|-- Square
    Shape <|-- Textbox

    ExportCanvas <|-- PNGExporter
    ExportCanvas <|-- PDFExporter

    Canvas --> Shape : contains
    Canvas --> Memento : creates
    CareTaker --> Memento : manages
    ExportCanvas --> Canvas : uses

    RectangleFactory ..> Rectangle : creates
    SquareFactory ..> Square : creates
    TextboxFactory ..> Textbox : creates